
opam-version: "2.0"
version: "0.1.0"
maintainer: "derutakayu@gmail.com"
authors: "derui"
license: "MIT"
synopsis: "OCaml key mapper"
homepage: "https://github.com/derui/okeyfum"
bug-reports: "https://github.com/derui/okeyfum"
dev-repo: "git+https://github.com/derui/okeyfum"
tags: []
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
depends: [
  "dune" { < "3.0.0"}
  "ctypes" { < "0.18.0"}
  "ctypes.foreign" { < "0.18.0"}
  "memhir" { build }
  "alcotest" {< "2.0.0" & with-test}
  "alcotest-lwt" {< "2.0.0" & with-test}
]
available: ["ocaml" >= "4.09.0"]
